--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - pip install -r reqs/prod.txt
 env:
   - DJANGO_SETTINGS_MODULE="djangus.settings.travis"
+  - SECRET_KEY="totallynotmyrealsecretkey"
 before_script:
   - psql -c 'create database djangus;' -U postgres
   - python manage.py syncdb --noinput
