Lots of models to write... tomorrow.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ python:
   - "2.7"
 services:
   - postgresql
+  - rabbitmq
 install: 
   - pip install -r reqs/prod.txt
 env:
-  - DJANGO_SETTINGS_MODULE="djangus.settings.travis"
-  - SECRET_KEY="totallynotmyrealsecretkey"
+  - DJANGO_SETTINGS_MODULE="djangus.settings.travis" SECRET_KEY="totallynotmyrealsecretkey"
 before_script:
   - psql -c 'create database djangus;' -U postgres
   - python manage.py syncdb --noinput
