--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 install: 
   - pip install -r reqs/travis.txt
 env:
-  - DJANGO_SETTINGS_MODULE="bongo.settings.travis" DJANGUS_SECRET_KEY="totallynotmyrealsecretkey"
+  - DJANGO_SETTINGS_MODULE="bongo.settings.travis" BONGO_SECRET_KEY="totallynotmyrealsecretkey"
 before_script:
   - psql -c 'create database bongo;' -U postgres
   - python manage.py syncdb --noinput
