Added New Relic

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ loglevel=info
 pidfile=/tmp/supervisor_bongo.pid
 
 [program:gunicorn]
-command=gunicorn -c gunicorn.py.ini wsgi:application
+command=NEW_RELIC_CONFIG_FILE=newrelic.ini newrelic-admin gunicorn -c gunicorn.py.ini wsgi:application
 stdout_logfile=logs/bongo.log
 redirect_stderr=true
 
