Rejigger supervisor new relic config

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,9 +6,10 @@ loglevel=info
 pidfile=/tmp/supervisor_bongo.pid
 
 [program:gunicorn]
-command=NEW_RELIC_CONFIG_FILE=newrelic.ini newrelic-admin gunicorn -c gunicorn.py.ini wsgi:application
+command=newrelic-admin run-program gunicorn -c gunicorn.py.ini wsgi:application
 stdout_logfile=logs/bongo.log
 redirect_stderr=true
+environment=NEW_RELIC_CONFIG_FILE=newrelic.ini
 
 
 [program:celery]
