--- a/newrelic.ini
+++ b/newrelic.ini
@@ -33,7 +33,7 @@ license_key = 2fe3ebd56a4d984c993024dabddc594b79ca179f
 # application as you would like it to show up in New Relic UI.
 # The UI will then auto-map instances of your application into a
 # entry on your home dashboard page.
-app_name = Python Application
+app_name = Bongo
 
 # When "true", the agent collects performance data about your
 # application and reports this data to the New Relic UI at
@@ -52,7 +52,7 @@ monitor_mode = true
 # write out a log file, it is also possible to say "stderr" and
 # output to standard error output. This would normally result in
 # output appearing in your web server log.
-#log_file = /tmp/newrelic-python-agent.log
+log_file = stderr
 
 # Sets the level of detail of messages sent to the log file, if
 # a log file location has been provided. Possible values, in
@@ -105,84 +105,16 @@ high_security = false
 # proxy_user =
 # proxy_pass =
 
-# Tells the transaction tracer and error collector (when
-# enabled) whether or not to capture the query string for the
-# URL and send it as the request parameters for display in the
-# UI. When "true", it is still possible to exclude specific
-# values from being captured using the "ignored_params" setting.
-capture_params = false
-
 # Space separated list of variables that should be removed from
 # the query string captured for display as the request
 # parameters in the UI.
 ignored_params =
-
-# The transaction tracer captures deep information about slow
-# transactions and sends this to the UI on a periodic basis. The
-# transaction tracer is enabled by default. Set this to "false"
-# to turn it off.
-transaction_tracer.enabled = true
-
-# Threshold in seconds for when to collect a transaction trace.
-# When the response time of a controller action exceeds this
-# threshold, a transaction trace will be recorded and sent to
-# the UI. Valid values are any positive float value, or (default)
-# "apdex_f", which will use the threshold for a dissatisfying
-# Apdex controller action - four times the Apdex T value.
-transaction_tracer.transaction_threshold = apdex_f
-
-# When the transaction tracer is on, SQL statements can
-# optionally be recorded. The recorder has three modes, "off"
-# which sends no SQL, "raw" which sends the SQL statement in its
-# original form, and "obfuscated", which strips out numeric and
-# string literals.
-transaction_tracer.record_sql = obfuscated
-
-# Threshold in seconds for when to collect stack trace for a SQL
-# call. In other words, when SQL statements exceed this
-# threshold, then capture and send to the UI the current stack
-# trace. This is helpful for pinpointing where long SQL calls
-# originate from in an application.
-transaction_tracer.stack_trace_threshold = 0.5
-
-# Determines whether the agent will capture query plans for slow
-# SQL queries. Only supported in MySQL and PostgreSQL. Set this
-# to "false" to turn it off.
-transaction_tracer.explain_enabled = true
-
-# Threshold for query execution time below which query plans
-# will not not be captured. Relevant only when "explain_enabled"
-# is true.
-transaction_tracer.explain_threshold = 0.5
-
-# Space separated list of function or method names in form
-# 'module:function' or 'module:class.function' for which
-# additional function timing instrumentation will be added.
-transaction_tracer.function_trace =
-
-# The error collector captures information about uncaught
-# exceptions or logged exceptions and sends them to UI for
-# viewing. The error collector is enabled by default. Set this
-# to "false" to turn it off.
-error_collector.enabled = true
-
-# To stop specific errors from reporting to the UI, set this to
-# a space separated list of the Python exception type names to
-# ignore. The exception name should be of the form 'module:class'.
-error_collector.ignore_errors =
 
 # Browser monitoring is the Real User Monitoring feature of the UI.
 # For those Python web frameworks that are supported, this
 # setting enables the auto-insertion of the browser monitoring
 # JavaScript fragments.
 browser_monitoring.auto_instrument = true
-
-# A thread profiling session can be scheduled via the UI when
-# this option is enabled. The thread profiler will periodically
-# capture a snapshot of the call stack for each active thread in
-# the application to construct a statistically representative
-# call tree.
-thread_profiler.enabled = true
 
 # ---------------------------------------------------------------------------
 
