--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ env:
     - BONGO_SECRET_KEY="totallynotmyrealsecretkey"
     - BONGO_LOGENTRIES_TOKEN="nopenotreal"
     - BONGO_RAVEN_DSN="lolnope"
-    secure: "fQbky6XqlOcEtd97/GNvOca7VK4n2cyV7USf+2Bt+aFC3LyZRyPSSYjjdxUBjeRheGhdov/sjxcpwWIEJ6lF/JxOjyv4ekEQBlLHk1q34pQxPmaYcJ6DOIm/U6Vv/IRyOtBizc3TqutLOzpLlfxdDr0SbGyM+EJbNBdb1tUrLNo="
-    secure: "rrGk1BvBIx5TZhHxrG/d8ClMcESzj0Y/puRiK0xZHFufdazaHiN5z9LLwrz+hM1K5FGQBYpgpCEwUekRtHNPpVTJX4bzgdjeH/SrQmxwJWCIZeHLuqwtMpG03BxkcJxgtReXgSH5Ibfqc5AmRvyTapIGQLBDaYZp5ghzFfZGQNo="
+    - secure: "fQbky6XqlOcEtd97/GNvOca7VK4n2cyV7USf+2Bt+aFC3LyZRyPSSYjjdxUBjeRheGhdov/sjxcpwWIEJ6lF/JxOjyv4ekEQBlLHk1q34pQxPmaYcJ6DOIm/U6Vv/IRyOtBizc3TqutLOzpLlfxdDr0SbGyM+EJbNBdb1tUrLNo="
+    - secure: "rrGk1BvBIx5TZhHxrG/d8ClMcESzj0Y/puRiK0xZHFufdazaHiN5z9LLwrz+hM1K5FGQBYpgpCEwUekRtHNPpVTJX4bzgdjeH/SrQmxwJWCIZeHLuqwtMpG03BxkcJxgtReXgSH5Ibfqc5AmRvyTapIGQLBDaYZp5ghzFfZGQNo="
 before_script:
   - psql -c 'create database bongo_test;' -U postgres
   - python manage.py syncdb --noinput
