--- a/gunicorn.py.ini
+++ b/gunicorn.py.ini
@@ -11,5 +11,5 @@ def max_workers():
 
 bind = '0.0.0.0:' + environ.get('PORT', '8000')
 max_requests = 1000
-worker_class = 'eventlet'
+worker_class = 'sync'
 workers = max_workers()
