--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Folder of secret keys and passwords
-bongo/settings/secrets/*
 ansible/env_vars/secure.yml
 
 # Pycocide
@@ -23,4 +21,6 @@ bongo/media/*
 /.sass-cache
 
 *.log
+
+.vagrant/*
 
