--- a/ansible/roles/web/vars/main.yml
+++ b/ansible/roles/web/vars/main.yml
@@ -38,3 +38,4 @@ django_environment:
   DISQUS_API_KEY: "{{ disqus_api_key }}"
   SCRIBD_API_KEY: "{{ scribd_api_key }}"
   SCRIBD_API_SECRET: "{{ scribd_api_secret }}"
+  LOGENTRIES_TOKEN: "{{ logentries_token }}"
