--- a/ansible/roles/db/tasks/main.yml
+++ b/ansible/roles/db/tasks/main.yml
@@ -1,42 +1,5 @@
 ---
 
-- name: Install PostgreSQL
-  apt: name={{ item }} update_cache={{ update_apt_cache }} state=installed
-  with_items:
-    - postgresql
-    - postgresql-contrib
-    - libpq-dev
-    - python-psycopg2
-  tags: packages
+- include: mysql.yml
 
-- name: Copy PostgreSQL config file
-  template: src=pg_hba.conf.j2
-            dest=/etc/postgresql/9.3/main/pg_hba.conf
-            backup=yes
-  notify: restart postgresql
-
-- name: Ensure the PostgreSQL service is running
-  service: name=postgresql state=restarted enabled=yes
-
-- name: Ensure database is created
-  sudo_user: postgres
-  postgresql_db: name={{ db_name }}
-                 encoding='UTF-8'
-                 lc_collate='en_US.UTF-8'
-                 lc_ctype='en_US.UTF-8'
-                 template='template0'
-                 state=present
-
-- name: Ensure user has access to the database
-  sudo_user: postgres
-  postgresql_user: db={{ db_name }}
-                   name={{ db_user }}
-                   password={{ db_password }}
-                   priv=ALL
-                   state=present
-
-- name: Ensure user does not have unnecessary privileges
-  sudo_user: postgres
-  postgresql_user: name={{ db_user }}
-                   role_attr_flags=NOSUPERUSER,NOCREATEDB
-                   state=present
+- include: postgres.yml
