--- a/ansible/roles/web/tasks/setup_nginx.yml
+++ b/ansible/roles/web/tasks/setup_nginx.yml
@@ -12,6 +12,12 @@
   copy: content="{{ ssl_key }}" dest={{ ssl_dest_dir }}/{{ application_name }}.key
   notify: restart nginx
 
+- name: Create the Nginx global configuration file
+  template: src=nginx.conf.j2
+            dest=/etc/nginx/nginx.conf
+            backup=yes
+  notify: reload nginx
+
 - name: Create the Nginx configuration file
   template: src=nginx_site_config.j2
             dest=/etc/nginx/sites-available/{{ application_name }}
