--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_script:
   - psql -c 'create database bongo_test;' -U postgres
   - python manage.py syncdb --noinput
   - python manage.py nltk-init
+  - celery -A bongo.apps.bongo worker &
 script:
   - coverage run --source=bongo manage.py test
 after_success:
