--- a/ansible/roles/base/tasks/monitoring.yml
+++ b/ansible/roles/base/tasks/monitoring.yml
@@ -1,13 +1,14 @@
 ---
 
 - name: Add New Relic to apt sources
-  lineinfile: line="deb http://apt.newrelic.com/debian/ newrelic non-free" state=present dest=/etc/apt/sources.list.d/newrelic.list create=yes
+  apt_repository:
+    repo: deb http://apt.newrelic.com/debian/ newrelic non-free
+    state: present
 
 - name: Get the New Relic apt key
-  get_url: url=https://download.newrelic.com/548C16BF.gpg dest=/tmp/newrelic.gpg
-
-- name: Trust the New Relic apt key
-  command: apt-key add /tmp/newrelic.gpg
+  apt_key:
+    url: https://download.newrelic.com/548C16BF.gpg
+    state: present
 
 - name: Install New Relic Server
   apt: update_cache=yes name=newrelic-sysmond state=installed
