--- a/ansible/roles/db/tasks/postgres.yml
+++ b/ansible/roles/db/tasks/postgres.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Install PostgreSQL
-  apt: name={{ item }} update_cache={{ update_apt_cache }} state=installed
+  apt: name={{ item }} state=latest
   with_items:
     - postgresql
     - postgresql-contrib
