--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -23,6 +23,7 @@
     - build-essential
     - ntp
     - htop
+    - iftop
     - git
     - python-dev
     - python3.4-dev
@@ -55,6 +56,8 @@
   with_items:
     - virtualenv
     - newrelic
+    - awscli
+    - boto
   tags: packages
 
 - include: security.yml tags=security
