Add some things from Presence that will speed up Nginx

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -65,6 +65,8 @@
 - include: monitoring.yml tags=monitoring
   when: install_newrelic_server
 
+- include: performance.yml tags=performance
+
 - name: Append looback to /etc/hosts
   when: setup_etc_hosts
   sudo: yes
