Playbook works on Vagrant

--- a/ansible/env_vars/base.yml
+++ b/ansible/env_vars/base.yml
@@ -1,6 +1,6 @@
 ---
 
-git_repo: ssh://git@github.com/bowdoinorient/bongo.git
+git_repo: ssh://git@github.com/BowdoinOrient/bongo.git
 branch: develop
 
 application_name: bongo
@@ -11,5 +11,5 @@ ssl_dest_dir: /etc/ssl
 db_user: "{{ application_name }}"
 db_name: "{{ application_name }}"
 
-apt_get_upgrade: no
+apt_get_upgrade: true
 restore_mysql: false
