--- a/ansible/group_vars/prod.yml
+++ b/ansible/group_vars/prod.yml
@@ -52,9 +52,8 @@ fail2ban_maxretry: 3
 
 
 # Swap settings
-swapon: true
-swapfile_swappiness: 10
-swapfile_size: 512MB
+swapfile_swappiness: 20
+swapfile_size: 1G
 
 
 # Monitoring settings
