--- a/ansible/roles/celery/vars/main.yml
+++ b/ansible/roles/celery/vars/main.yml
@@ -3,11 +3,11 @@
 server_root_dir: /webapps
 setup_celeryflower: yes
 
-virtualenv_path: "{{ server_root_dir }}/hey"
-project_path: "{{ server_root_dir }}/hey/hey"
-application_path: "{{ server_root_dir }}/hey/hey/hey"
+virtualenv_path: "{{ server_root_dir }}/bongo"
+project_path: "{{ server_root_dir }}/bongo/bongo"
+application_path: "{{ server_root_dir }}/bongo/bongo/bongo"
 
-celery_user: "{{ application_name }}"
+celery_user: orient
 celery_group: webapps
 
 celery_application_name: celery
@@ -17,3 +17,4 @@ celery_template_file: "{{ celery_application_name }}_start.j2"
 celeryflower_template_file: "{{ celeryflower_application_name }}_start.j2"
 
 celery_loglevel: info
+celery_logfile: "{{ application_log_dir }}/celery_supervisor.log"
