--- a/ansible/roles/web/tasks/setup_git_repo.yml
+++ b/ansible/roles/web/tasks/setup_git_repo.yml
@@ -1,4 +1,23 @@
 ---
+
+- name: Create a .ssh directory for root
+  when: code_source == "git"
+  file: path=/root/.ssh state=directory
+
+- name: Create the SSH public key file
+  copy:
+    content: "{{ git_ssh_pub_key }}"
+    dest: /root/.ssh/id_rsa.pub
+    mode: 0644
+  when: code_source == "git"
+
+- name: Create the SSH private key file
+  copy:
+    content: "{{ git_ssh_priv_key }}"
+    dest: /root/.ssh/id_rsa
+    mode: 0600
+  when: code_source == "git"
+
 - name: Setup the Git repo
   git: repo={{ git_repo }} version={{ branch }} dest={{ project_path }} accept_hostkey=yes
   when: code_source == "git"
