--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,4 @@
 [defaults]
-host_key_checking=False
-hostfile=ansible/inventory/ec2_static
-private_key_file=~/.ssh/hey.pem
-remote_user=ubuntu
+hostfile=ansible/inventory/prod
+private_key_file=~/.ssh/citadel.pem
 nocows=1
