--- a/ansible/roles/db/tasks/postgres.yml
+++ b/ansible/roles/db/tasks/postgres.yml
@@ -26,6 +26,7 @@
                  lc_ctype='en_US.UTF-8'
                  template='template0'
                  state=present
+  tags: debug
 
 - name: Ensure user has access to the database
   sudo_user: postgres
