Issue with reloading sshd

--- a/ansible/roles/base/handlers/main.yml
+++ b/ansible/roles/base/handlers/main.yml
@@ -13,4 +13,4 @@
   service: name=fail2ban state=reloaded
 
 - name: Restart sshd
-  service: sshd state=restarted
+  service: name=sshd state=restarted
