Have had to destroy DO server several times, having to remove from known_hosts is getting annoying

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,4 +2,5 @@
 hostfile=ansible/inventory/prod
 private_key_file=~/.ssh/citadel.pem
 retry_files_enabled = False
+StrictHostKeyChecking=no
 nocows=1
