--- a/ansible/roles/web/tasks/setup_django_app.yml
+++ b/ansible/roles/web/tasks/setup_django_app.yml
@@ -4,7 +4,6 @@
   pip:
     virtualenv: "{{ virtualenv_path }}"
     requirements: "{{ requirements_file }}"
-    extra_args: "--upgrade"
     executable: pip3
   tags:
     - django
@@ -83,6 +82,26 @@
   tags:
     - django
     - django_loaddata
+
+- name: Generate sqlsequencereset commands
+  django_manage:
+    command: sqlsequencereset bongo
+    app_path: "{{ project_path }}"
+    virtualenv: "{{ virtualenv_path }}"
+    settings: "{{ django_settings_file }}"
+  environment: django_environment
+  when: import_database
+  tags:
+    - django
+    - django_import
+  register: result
+
+- name: Pipe sqlsequencereset commands into Postgres
+  shell: echo '{{ result.out }}' | PGPASSWORD={{ db_password }} psql -U bongo -d bongo
+  when: import_database
+  tags:
+    - django
+    - django_import
 
 - name: Populate Postgres database from legacy MySQL
   django_manage:
