--- a/ansible/env_vars/base.yml
+++ b/ansible/env_vars/base.yml
@@ -11,6 +11,12 @@ ssl_dest_dir: /etc/ssl
 db_user: "{{ application_name }}"
 db_name: "{{ application_name }}"
 
-apt_get_upgrade: true
-restore_mysql: false
-import_database: false
+# Set "bare" to true if the machine has not yet had a complete successful deploy.
+# This performs one-time set-up steps like importing the MySQL database, doing
+# a complete apt-get upgrade, and downloading NLTK tokenizers.
+bare: true
+
+apt_get_upgrade: "{{ bare }}"
+restore_mysql: "{{ bare }}"
+import_database: "{{ bare }}"
+seed_nltk: "{{ bare }}"
