--- a/ansible/roles/web/tasks/setup_django_app.yml
+++ b/ansible/roles/web/tasks/setup_django_app.yml
@@ -97,7 +97,7 @@
 
 - name: Populate Postgres database from legacy MySQL
   django_manage:
-    command: importdb
+    command: importdb --verbose
     app_path: "{{ project_path }}"
     virtualenv: "{{ virtualenv_path }}"
     settings: "{{ django_settings_file }}"
