Very close to making importdb work. New year, new edge cases

--- a/ansible/env_vars/base.yml
+++ b/ansible/env_vars/base.yml
@@ -20,3 +20,6 @@ apt_get_upgrade: "{{ bare }}"
 restore_mysql: "{{ bare }}"
 import_database: "{{ bare }}"
 seed_nltk: "{{ bare }}"
+flush_database: "{{ bare }}"
+
+backup_database: false
