--- a/ansible/roles/web/tasks/main.yml
+++ b/ansible/roles/web/tasks/main.yml
@@ -8,6 +8,8 @@
 
 - include: setup_django_app.yml
 
+- include: setup_database.yml
+
 - include: setup_newrelic.yml
 
 - include: setup_supervisor.yml
