--- a/ansible/env_vars/base.yml
+++ b/ansible/env_vars/base.yml
@@ -14,7 +14,7 @@ db_name: "{{ application_name }}"
 # Set "bare" to true if the machine has not yet had a complete successful deploy.
 # This performs one-time set-up steps like importing the MySQL database, doing
 # a complete apt-get upgrade, and downloading NLTK tokenizers.
-bare: true
+bare: false
 
 apt_get_upgrade: "{{ bare }}"
 restore_mysql: "{{ bare }}"
