--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_script:
   - psql -c 'create database bongo_test;' -U postgres
   - python manage.py syncdb --noinput
   - python manage.py nltk-init
-  - python manage.py rebuild_index
+  - python manage.py rebuild_index --noinput
   - celery -A bongo.apps.bongo worker &
 script:
   - coverage run --source=bongo manage.py test
