--- a/ansible/roles/web/tasks/setup_nginx.yml
+++ b/ansible/roles/web/tasks/setup_nginx.yml
@@ -1,7 +1,20 @@
 ---
 
-- name: Install Nginx
+- name: Add the Nginx signing key to apt keys
+  tags: packages
+  apt_key:
+    url: http://nginx.org/keys/nginx_signing.key
+    state: present
+
+- name: Add Nginx mainline to sources.list
+  tags: packages
+  apt_repository:
+    repo: deb http://nginx.org/packages/mainline/ubuntu/ trusty nginx
+    state: present
+
+- name: Install Nginx mainline
   apt:
+    update: yes
     name: nginx
     state: latest
   tags: packages
