This command does not have a --noinput option - only rebuild_index does

--- a/ansible/roles/elasticsearch/vars/main.yml
+++ b/ansible/roles/elasticsearch/vars/main.yml
@@ -2,9 +2,9 @@
 # Elasticsearch Ansible Sample Variables
 
 elasticsearch_version: 0.90.5
-elasticsearch_heap_size: 1g
+elasticsearch_heap_size: 65535
 elasticsearch_max_open_files: 65535
-elasticsearch_max_locked_memory: unlimited
+elasticsearch_max_locked_memory: 65535
 elasticsearch_timezone: "America/New_York"
 elasticsearch_cluster_name: elasticsearch-ansible
 elasticsearch_node_name: elasticsearch-ansible-node
