--- a/ansible/roles/base/tasks/monitoring.yml
+++ b/ansible/roles/base/tasks/monitoring.yml
@@ -42,10 +42,23 @@
     dest: /etc/rsyslog.conf
   notify: restart rsyslog
 
+- name: Touch rsyslog state files
+  command: "touch {{ item }} && chown syslog:adm {{ item }}"
+  with_items:
+    - /var/spool/rsyslog/bongo_nginx_error
+    - /var/spool/rsyslog/bongo_nginx_access
+  notify: restart rsyslog
+
 - name: Add nginx logs to rsyslog collection
   template:
     src: 22-nginx.conf.j2
     dest: /etc/rsyslog.d/22-nginx.conf
+  notify: restart rsyslog
+
+- name: Add nginx logs to rsyslog collection
+  template:
+    src: 50-default.conf.j2
+    dest: /etc/rsyslog.d/50-default.conf
   notify: restart rsyslog
 
 - name: validate rsyslog config
