Disable celeryflower - it's very memory-heavy

--- a/ansible/roles/celery/handlers/main.yml
+++ b/ansible/roles/celery/handlers/main.yml
@@ -3,5 +3,5 @@
 - name: restart {{ celery_application_name }}
   supervisorctl: name={{ celery_application_name }} state=restarted
 
-- name: restart {{ celeryflower_application_name }}
-  supervisorctl: name={{ celeryflower_application_name }} state=restarted
+# - name: restart {{ celeryflower_application_name }}
+#   supervisorctl: name={{ celeryflower_application_name }} state=restarted
