--- a/ansible/roles/celery/tasks/main.yml
+++ b/ansible/roles/celery/tasks/main.yml
@@ -9,19 +9,16 @@
   register: supervisor_applications
   tags:
     - celery
-    - celerycam
-    - deploy
+    # - celeryflower
 
 - name: Restart the {{ celery_application_name }} app
   supervisorctl: name={{ celery_application_name }} state=restarted
   when: supervisor_applications.stdout.find('{{ celery_application_name }}') != -1
   tags:
     - celery
-    - deploy
 
-- name: Restart the {{ celeryflower_application_name }} app
-  supervisorctl: name={{ celeryflower_application_name }} state=restarted
-  when: supervisor_applications.stdout.find('{{ celeryflower_application_name }}') != -1
-  tags:
-    - celeryflower
-    - deploy
+# - name: Restart the {{ celeryflower_application_name }} app
+  # supervisorctl: name={{ celeryflower_application_name }} state=restarted
+  # when: supervisor_applications.stdout.find('{{ celeryflower_application_name }}') != -1
+  # tags:
+  #   - celeryflower
