--- a/ansible/roles/base/tasks/monitoring.yml
+++ b/ansible/roles/base/tasks/monitoring.yml
@@ -47,6 +47,8 @@
   with_items:
     - /var/spool/rsyslog/bongo_nginx_error
     - /var/spool/rsyslog/bongo_nginx_access
+    - /var/spool/rsyslog/bongo_celery
+    - /var/spool/rsyslog/bongo_celeryflower
   notify: restart rsyslog
 
 - name: Add nginx logs to rsyslog collection
@@ -55,7 +57,13 @@
     dest: /etc/rsyslog.d/22-nginx.conf
   notify: restart rsyslog
 
-- name: Add nginx logs to rsyslog collection
+- name: Add celery logs to rsyslog collection
+  template:
+    src: 23-celery.conf.j2
+    dest: /etc/rsyslog.d/23-celery.conf
+  notify: restart rsyslog
+
+- name: Install default rsyslog configuration
   template:
     src: 50-default.conf.j2
     dest: /etc/rsyslog.d/50-default.conf
