--- a/ansible/group_vars/prod.yml
+++ b/ansible/group_vars/prod.yml
@@ -19,18 +19,11 @@ gunicorn_max_requests: 0
 nginx_server_name: "{{ inventory_hostname }}"
 
 
-# RabbitMQ settings.
-rabbitmq_server_name: "{{ inventory_hostname }}"
-rabbitmq_admin_user: admin
-rabbitmq_application_vhost: "{{ application_name }}"
-rabbitmq_application_user: "{{ application_name }}"
-rabbitmq_application_port: 5672
-rabbitmq_broker_url: "amqp://{{ rabbitmq_application_user }}:{{ rabbitmq_application_password }}@localhost:{{ rabbitmq_application_port }}/{{ rabbitmq_application_vhost }}"
-
-
-# Celery settings.
-celery_num_workers: 1
-celery_application_settings_file: bongo.settings.prod
+# Redis settings
+redis_host: 127.0.0.1
+redis_port: 6379
+redis_vhost: 0
+redis_url: redis://{{ redis_host }}:{{ redis_port }}/{{ redis_vhost }}
 
 
 # Application settings.
